--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">TW-ListView</string>
-    <string name="hello_world">Hello World</string>
     <string name="progimage">progImage</string>
-    <string name="hello_world">Hello World</string>
+    <string name="hello_world">default</string>
 </resources>
